--- a/.taskcat.yml
+++ b/.taskcat.yml
@@ -29,3 +29,24 @@ tests:
     parameters:
       pSRASourceS3BucketName: $[taskcat_autobucket]
       pDisableGuardDuty: 'Yes'
+
+  logging-top-level-nonct:
+    regions:
+      - us-east-1
+    template: templates/deepwatch-root-stack.yaml
+    parameters:
+      pSRASourceS3BucketName: $[taskcat_autobucket]
+      pSRAS3BucketRegion: us-east-1
+      pAutoEnableS3Logs: 'true'
+      pAutoEnableKubernetesAuditLogs: 'false'
+      pAutoEnableMalwareProtection: 'false'
+      pDeepwatchRoleName: 'deepwatch-mdr-role'
+      pEnableLambdaDataEvents: 'false'
+      pEnableS3DataEvents: 'true'
+      pDisableGuardDuty: 'Yes'
+      pControlTower: 'false'
+      pLogArchiveAccountId: $[taskcat_ssm_/nonct/log-archive-account-id]
+      pSecurityAccountId: $[taskcat_ssm_/nonct/audit-account-id]
+      pGovernedRegions: 'us-east-1,us-east-2'
+      pAdminRoleName: 'AWSCloudFormationStackSetAdministrationRole'
+      pExecRoleName: 'AWSCloudFormationStackSetExecutionRole'
