Enable scotsuite execution as part of functional tests

--- a/scripts/cleanup_config.json
+++ b/scripts/cleanup_config.json
@@ -1,5 +1,9 @@
 [
     {
+        "Type" : "STACK",
+        "Filter" : "tCaT-logging-top-level-"
+    },
+    {
         "Type" : "SSM_PARAMETER",
         "Filter" : "/sra/control-tower/",
         "Account" : "log_account"
@@ -78,6 +82,17 @@
         "Filter": "sra-codebuild-project"
     },
     {
+        "Type" : "GUARDDUTY_DET"
+    },
+    {
+        "Type" : "STACK_SET",
+        "Filter" : "sra-stackset-execution-role"
+    },
+    {
+        "Type" : "STACK",
+        "Filter" : "sra-common-prerequisites-staging-s3-bucket"
+    },
+    {
         "Type" : "IAM_ROLE",
         "Filter" : "sra-execution",
         "Account" : "log_account"
@@ -92,18 +107,7 @@
         "Account" : "audit"
     },
     {
-        "Type" : "STACK_SET",
-        "Filter" : "sra-stackset-execution-role"
-    },
-    {
         "Type" : "STACK",
-        "Filter" : "sra-common-prerequisites-staging-s3-bucket"
-    },
-    {
-        "Type" : "STACK",
-        "Filter" : "tCaT-logging-top-level-"
-    },
-    {
-        "Type" : "GUARDDUTY_DET"
+        "Filter" : "Lambda-S3-PresignedURL"
     }
 ]
